[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "guardrail-ai"
version = "1.0.0"
description = "Official Python SDK for AI Traffic Light for Code — security scanning API client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]
keywords = ["guardrail", "ai-traffic-light", "security", "scanner", "sdk", "aivss", "cvss", "sbom"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://code.aitrafficlight.com/docs"
Repository = "https://github.com/GT-Traffic-Light/guardrail-sdk-python"
Issues = "https://github.com/GT-Traffic-Light/guardrail-sdk-python/issues"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-httpx>=0.30", "mypy>=1.10"]

[tool.setuptools.packages.find]
where = ["."]
include = ["guardrail*"]

[tool.mypy]
strict = true
